newgoapp-ingress-canary.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newgoapp-ingress-canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  ingressClassName: nginx
  rules:
  - host: api.airports.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: newgoapp-v2-svc
            port:
              number: 8080
